using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class MalwareWrong : MonoBehaviour
{
    public Animator animator;
    public GameObject Malware;

    // Start is called before the first frame update
    void Start()
    {
        animator = Malware.GetComponent<Animator>();
        //Malware.SetActive(false);
        //AllCredits.GetComponent<Canvas>().enabled = false;
    }

    // Update is called once per frame
    void Update()
    {

    }

    public void ActivateMalware()
    {
        //Malware.SetActive(true);
        //AllCredits.GetComponent<Canvas>().enabled = true;
        animator.SetTrigger("WrongAnswer");
    }

    public void CorrectResponse()
    {
        animator.SetTrigger("CorrectAnswer");
    }

    public void AntivirusDisabled()
    {
        animator.SetTrigger("AntivirusDisabled");
    }
}
